--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "authors": [
         {
             "name": "spadwen",
-            "email": "dwentp@gmail.com"
+            "email": "spa.dwen@gmail.com"
         }
     ],
     "minimum-stability": "stable"
